@@ -28,6 +28,10 @@ Cahiers de textes:
   (pour proposer un CDT personnel aux professeurs, indépendamment d'un autre CDT
    éventuellement rempli par les professeurs sur un ENT pour les élèves,...).
 
+Discipline:
+- Possibilité d'ouvrir le paramétrage du pointage des menus incidents à des 
+  utilisateurs non administrateur (typiquement tel CPE).
+
 LSUN:
 - Possibilité de n'extraire qu'une ou certaines périodes.
 
